--- a/wk03content.html
+++ b/wk03content.html
@@ -25,7 +25,7 @@
 				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil Solenoid</a>, Nicolas - Servo</li>
 		<li>AB ResistorRecognition: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
 				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux (0x29 Broadcom)</a></li>
-		<li>ABB MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge (Broadcom)</a>, 
+		<li>ABB MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/SmartHome">Bobby - SN754410 Quad Half H-Bridge (Broadcom)</a>, 
 				   <a href="https://github.com/samfat787/SmartDenProject">Sam - YSL-R596CR3G4B5C-C10 RGB LED (stm32f103c8t6 and st-link v2)</a>, 
 				   <a href="https://github.com/boskyle/SmartDen">Boswell - Keyes Microphone Sound Detection Sensor Module (Broadcom)</a></li>
 		<li>ABBx SmartHouseControl: <a href="https://github.com/namnguyen20999/.github.io-SmartHouse">Nam - VEML7700 Lux (stm32f103c8t6 and st-link v2)</a>,
