--- a/wk03content.html
+++ b/wk03content.html
@@ -25,7 +25,7 @@
 				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil Solenoid</a>, Nicolas - Servo</li>
 		<li>AB ResistorRecognition: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
 				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux (0x29 Broadcom)</a></li>
-		<li>ABB MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/SmartHome">Bobby - SN754410 Quad Half H-Bridge (Broadcom)</a>, 
+		<li>ABB MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/SmartHome">Bobby - ULN2003APG Driver (Broadcom)</a>, 
 				   <a href="https://github.com/samfat787/SmartDenProject">Sam - YSL-R596CR3G4B5C-C10 RGB LED (stm32f103c8t6 and st-link v2)</a>, 
 				   <a href="https://github.com/boskyle/SmartDen">Boswell - Keyes Microphone Sound Detection Sensor Module (Broadcom)</a></li>
 		<li>ABBx SmartHouseControl: <a href="https://github.com/namnguyen20999/.github.io-SmartHouse">Nam - VEML7700 Lux (stm32f103c8t6 and st-link v2)</a>,
@@ -33,8 +33,8 @@
 					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - MCP9808 Temperature (Broadcom)</a>, Slava</li>
 		<li>ABC Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
 				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid (Broadcom)</a>, Deval</li>
-		<li>ABC MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
-				   <a href="https://github.com/Trung28899/SmartMirror">Trung - HC-SR04 Ultrasonic (stm32f103c8t6 and st-link v2?)</a>, Haider</li>
+		<li>ABC MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - HC-SR04 Ultrasonic (Atmel 328p)</a>, 
+				   <a href="https://github.com/Trung28899/SmartMirror">Trung - Amplifier (Broadcom)</a>, Haider - ISD1820 Recorder</li>
 		<li>ACC RestaurantPager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GY-GPSV3-NEO GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
 		<li>ACC Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir - FSR01CE Force</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
 		<li>BBB AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU (stm32f103c8t6 and st-link v2)</a>, 
