--- a/wk03content.html
+++ b/wk03content.html
@@ -33,7 +33,7 @@
 					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - MCP9808 Temperature (Broadcom)</a>, Slava</li>
 		<li>ABC Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
 				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid (Broadcom)</a>, Deval</li>
-		<li>ABC MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - HC-SR04 Ultrasonic (Atmel 328p)</a>, 
+		<li>AAC MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - HC-SR04 Ultrasonic (Atmel 328p)</a>, 
 				   <a href="https://github.com/Trung28899/SmartMirror">Trung - Amplifier (Broadcom)</a>, Haider - ISD1820 Recorder</li>
 		<li>ACC RestaurantPager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GY-GPSV3-NEO GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
 		<li>ACC Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir - FSR01CE Force</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
