Reminder to work on OS/Bootloader

--- a/newcontent.html
+++ b/newcontent.html
@@ -39,7 +39,7 @@ href="https://six0four.github.io/ceng317/wk07.html">Week 7 Hardware (Oct. 15/17)
  </SECTION>
  
  <SECTION ID="Reading_Week">
-  <H4>Reading Week (Oct. 22/24)</H4>
+  <H4>Reading Week (Oct. 22/24) - Load your OS/Bootloader</H4>
  </SECTION> 
 
  <SECTION ID="Section_8">
