Header/socket part numbers

--- a/wk06content.html
+++ b/wk06content.html
@@ -12,6 +12,9 @@
 	<li>Also watch some soldering <a href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">videos</a>.</li>
 	<li><a href="http://radiojove.gsfc.nasa.gov/telescope/soldering.htm">NASA Jove Project.</a></li>
 	<li>Next week is the Breadboard and PCB designed milestone.</li>
+	<li>Please note that the 6 pin stakable header is <a href="https://www.digikey.ca/products/en?keywords=SAM9289-ND">Digi-Key part number SAM9289-ND</a><img src="https://raw.githubusercontent.com/six0four/ceng317/master/6pinstackable.jpg" alt="header"></li>
+	<li>A 20 pin inline socket part number is <a href="https://www.digikey.ca/products/en?keywords=S7018-ND">Digi-Key part number S7018-ND</a>, Kelly does say that <a href="https://www.digikey.ca/product-detail/en/3m/929974-01-36-RK/929974E-01-36-ND/1094289">Digi-Key part number 929974E-01-36-ND</a> may be better.</li>
+	<li>If you need pins, the part number is <a href="https://www.digikey.ca/products/en?keywords=S1011EC-40-ND">Digi-Key part number S1011EC-40-ND</a></li>
    </ul>
   </p>
   
