--- a/wk07content.html
+++ b/wk07content.html
@@ -8,12 +8,9 @@
   <p>
    <ul>
    	<li>This week is the PCB designed milestone for which a graded blog entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
-	<li>Please note that the 6 pin stakable header is <a href="https://www.digikey.ca/products/en?keywords=SAM9289-ND">Digi-Key part number SAM9289-ND</a><img src="https://raw.githubusercontent.com/six0four/ceng317/master/6pinstackable.jpg" alt="header"></li>
-	<li>The socket part number is <a href="https://www.digikey.ca/products/en?keywords=S7014-ND">Digi-Key part number S7014-ND</a>, Kelly does say that <a href="https://www.digikey.ca/product-detail/en/3m/929974-01-36-RK/929974E-01-36-ND/1094289">Digi-Key part number 929974E-01-36-ND</a> may be better.</li>
-	<li>If you need pins, the part number is <a href="https://www.digikey.ca/products/en?keywords=S1011EC-40-ND">Digi-Key part number S1011EC-40-ND</a></li>
 	<li>Gerber file creation session.</li>
     <li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad by sending your Gerber files to their email address which is prototypelab_at_humber.ca. You may use our in house fabrication via them or use an alternative such as <a href="https://www.seeedstudio.com/fusion.html">SeeedStudio</a>.</li>
-	<li>Vlad says: "please ... come with a paper printout of your(sic) board so it’s easier to match the board with the student.</li>
+	<li>Vlad says: "please ... come with a paper printout of your(sic) board so it's easier to match the board with the student.</li>
 	<li>Next week is the breadboarded assembly milestone.</li>
    </ul>
   </p>
