--- a/wk03content.html
+++ b/wk03content.html
@@ -56,7 +56,7 @@
 				   Luca - SHT31-D</li>
 		<li>BCC Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O - PCA9685 Servo Driver (Broadcom)</a>, 
 				   Vikas - VCNL4010 Proximity, George - IR Beam</li>
-		<li>BCx SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W - KX023 Accelerometer (Mini Pro + Bluetooth)</a>, 
+		<li>BCx SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W - KX023 Accelerometer (Mini Pro + Bluetooth, Pi)</a>, 
 				   Antonio - MAX30102 Pulse, Gabriel</li>
 		<li>Bxx Solar: <a href="https://github.com/junedacaya/L-WingSolarPanelInteractiveDisplay">June - Lwing PLC</a>, 
 				   Vidyaanand, Nicholas</li>
