--- a/wk03content.html
+++ b/wk03content.html
@@ -23,8 +23,8 @@
 				   <a href="https://github.com/Trung28899/SmartMirror">Trung - Amplifier (Broadcom)</a>, Haider - ISD1820 Recorder</li>
 		<li>AAC PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert - PN532 RFID (Broadcom)</a>, 
 				   <a href="https://github.com/asperham/Parts-Crib">Colin - VCNL 4010 Proximity (stm32f103c8t6 and st-link v2)</a>, Jonathan - LCD</li>
-		<li>AAC Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver (Broadcom)</a>, 
-				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil - Solenoid (Broadcom)</a>, Nicolas - Servo</li>
+		<li>AAC Tennis: <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil - Solenoid (Broadcom)</a>,  
+				   <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver (Broadcom)</a>, Nicolas - Servo</li>
 		<li>AB ResistorRecognition: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - VL53L0X TOF (Broadcom)</a>, 
 				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux (0x29 Broadcom)</a></li>
 		<li>ABB MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/SmartHome">Bobby - ULN2003APG Driver (Atmel 328p + Bluetooth)</a>, 
