--- a/wk06content.html
+++ b/wk06content.html
@@ -16,6 +16,7 @@
 	<li>Also, a 6 pin stakable header is <a href="https://www.digikey.ca/products/en?keywords=SAM9289-ND">Digi-Key part number SAM9289-ND</a><img src="https://raw.githubusercontent.com/six0four/ceng317/master/6pinstackable.jpg" alt="header"></li>
 	<li>A 20 pin inline socket part number is <a href="https://www.digikey.ca/products/en?keywords=S7018-ND">Digi-Key part number S7018-ND</a>, Kelly does say that <a href="https://www.digikey.ca/product-detail/en/3m/929974-01-36-RK/929974E-01-36-ND/1094289">Digi-Key part number 929974E-01-36-ND</a> may be better.</li>
 	<li>If you need pins, the part number is <a href="https://www.digikey.ca/products/en?keywords=S1011EC-40-ND">Digi-Key part number S1011EC-40-ND</a></li>
+	<li><a href="http://wheretobuy.klab.ca/">Where to buy electronics in Toronto</a></li>
    </ul>
   </p>
   
