--- a/wk07content.html
+++ b/wk07content.html
@@ -8,9 +8,14 @@
   <p>
    <ul>
    	<li>This week is the PCB designed milestone for which a graded blog entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
-	<li>Gerber file creation session.</li>
     <li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad by sending your Gerber files to their email address which is prototypelab_at_humber.ca. You may use our in house fabrication via them or use an alternative such as <a href="https://www.seeedstudio.com/fusion.html">SeeedStudio</a>.</li>
 	<li>Vlad says: "please ... come with a paper printout of your(sic) board so it's easier to match the board with the student.</li>
+	<li>I wanted to let you know that given the challenges many of you had with your budgets I encourage you to consider the optional choice of creating another one according to the template provided here: <a href="http://support.seeedstudio.com/knowledgebase/articles/1886734-how-do-i-prepare-the-bill-of-materials-bom-file">http://support.seeedstudio.com/knowledgebase/articles/1886734-how-do-i-prepare-the-bill-of-materials-bom-file</a>
+	and if the timing works for your deadlines, likely using only Open Parts Library (OPL <a href="https://www.seeedstudio.com/opl.html">https://www.seeedstudio.com/opl.html</a>) components, it takes a week to produce your PCB and just over a week for shipping. <a href="http://support.seeedstudio.com/knowledgebase/articles/1886722-what-is-the-lead-time-for-seeed-fusion-pcb-assembl">http://support.seeedstudio.com/knowledgebase/articles/1886722-what-is-the-lead-time-for-seeed-fusion-pcb-assembl</a>
+	<a href="https://www.seeedstudio.com/free-assembly-for-5-pcbs.html">https://www.seeedstudio.com/free-assembly-for-5-pcbs.html</a>
+	Please add, say an extra resistor somewhere in your design that you already have in your parts kit, and do not include it in your spreadsheet. That way they will not populate that one and you can then still demonstrate your ability to solder.
+</li>
+	
 	<li>Next week is the breadboarded assembly milestone.</li>
    </ul>
   </p>
