--- a/wk08content.html
+++ b/wk08content.html
@@ -10,7 +10,18 @@
    	<li>This week is the breadboarded assembly milestone for which a graded blog entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
 	<li>If you have any outstanding questions regarding fasteners please refer to <a href="https://www.boltdepot.com/fastener-information/Printable-Tools/Printable-Fastener-Tools.pdf">BoltDepot.com</a> which has great fastener information, while visit <a href="https://en.wikipedia.org/wiki/Wire_gauge">Wikipedia</a> regarding wire gauge.</li>
 	<li>An <a href="http://www.openscad.org/downloads.html">OpenSCAD</a> demonstration, a laser cutting explanation using CorelDraw.</li>
-	<li>Next week is the PCB soldered milestone.</li>
+	<li>Next week is the PCB soldered milestone and is going to include a session ﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿in LRC3083 as part of the class.﻿﻿﻿﻿﻿<ul>
+	Before the workshops, you will need to:
+	 <li>Visit the Idea Lab 3D printing website and complete the tutorial and quiz (approx. 15 minutes)</li>
+	 <li>Sign up for the appropriate ﻿workshop using the link provided at the end of the quiz.</li>
+	 <li>Tuesday, November 5th, 2.00-3.00pm; or﻿,</li>
+	 <li>Thursday, November 7th, 1.30-2.30pm</li>
+	 <li>I have posted example files in the folder  https://github.com/six0four/ceng317/tree/master/exampleproject ﻿﻿﻿﻿﻿﻿﻿﻿</li>
+	 <li>ProjectBoxAssembledRev01.jpg is an image of a completed case.</li>
+	 <li>ProjectBoxLidRev01.cdr is the laser cutting file (we have CorelDraw in the lab).</li>
+	 <li>ProjectBoxBaseRev01.stl is the 3D printable file created by exporting:</li>
+	 <li>ProjectBoxBaseRev01.scad from  https://www.openscad.org/</li></ul></li>
+	<li>﻿Please make sure you have your PCB soldered and have signed up for a session before class next week.</li>
    </ul>
   </p>
  </SECTION> 
