--- a/wk08content.html
+++ b/wk08content.html
@@ -16,11 +16,11 @@
 	 <li>Sign up for the appropriate ﻿workshop using the link provided at the end of the quiz.</li>
 	 <li>Tuesday, November 5th, 2.00-3.00pm; or﻿,</li>
 	 <li>Thursday, November 7th, 1.30-2.30pm</li>
-	 <li>I have posted example files in the folder  https://github.com/six0four/ceng317/tree/master/exampleproject ﻿﻿﻿﻿﻿﻿﻿﻿</li>
+	 <li>I have posted example files in the folder <a href="https://github.com/six0four/ceng317/tree/master/exampleproject">https://github.com/six0four/ceng317/tree/master/exampleproject</a>﻿﻿﻿﻿</li>
 	 <li>ProjectBoxAssembledRev01.jpg is an image of a completed case.</li>
 	 <li>ProjectBoxLidRev01.cdr is the laser cutting file (we have CorelDraw in the lab).</li>
 	 <li>ProjectBoxBaseRev01.stl is the 3D printable file created by exporting:</li>
-	 <li>ProjectBoxBaseRev01.scad from  https://www.openscad.org/</li></ul></li>
+	 <li>ProjectBoxBaseRev01.scad from <a href="https://www.openscad.org/">https://www.openscad.org/</a></li></ul></li>
 	<li>﻿Please make sure you have your PCB soldered and have signed up for a session before class next week.</li>
    </ul>
   </p>
