--- a/wk10content.html
+++ b/wk10content.html
@@ -7,7 +7,7 @@
   <H3>Week 10 Hardware</H3>
   <p>
    <ul>
-	<li>This week is the power-up milestone which was be peer graded in the past(<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week7PeerGradingRubricforPCB.xml">rubric</a>).</li>
+	<li>This week is the power-up milestone which was peer graded in the past(<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week7PeerGradingRubricforPCB.xml">rubric</a>).</li>
 	<li>Progress Report Due, Hardware Demonstration - demonstration of functional hardware.</li>
 	<li>Next week the enclosure is due.</li>
    </ul>
