--- a/newcontent.html
+++ b/newcontent.html
@@ -20,7 +20,7 @@ href="https://six0four.github.io/ceng317/wk03.html">Week 3 Hardware (Sept. 17/19
  
  <SECTION ID="Section_4">
   <H4><a 
-href="https://six0four.github.io/ceng317/wk04.html">Week 4 Hardware (Sept. 24/26) - Budget Due</a></H4>
+href="https://six0four.github.io/ceng317/wk04.html">Week 4 Hardware (Sept. 24/26) - Bill of Materials Due</a></H4>
  </SECTION>
  
  <SECTION ID="Section_5">
