--- a/wk03content.html
+++ b/wk03content.html
@@ -8,8 +8,9 @@
   <p>
    <ul>
  	<li>Project Schedule Due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week3RubricforProjectSchedule.xml">rubric</a>), post a link to your submission on your blog.</li>
- 	<li>Budget Due next week - for an example visit: <a href="https://github.com/six0four/MicroRover/blob/master/PartsFor20MicroRoversRev02.xlsx">a budget for 20 MicroRovers</a>. It is helpful to include a column for expected delivery date. It is also helpful to indicate which parts have been obtained versus those that have yet to be ordered.</li>
-    <li>Here is a suggestion when forming your groups for 2019-2020 based on the information I have received so far:
+ 	<li>Bill of Materials Due next week - for an example visit: <a href="https://github.com/six0four/MicroRover/blob/master/PartsFor20MicroRoversRev02.xlsx">a budget for 20 MicroRovers</a>. It is helpful to include a column for expected delivery date. It is also helpful to indicate which parts have been obtained versus those that have yet to be ordered.</li>
+    <li>http://support.seeedstudio.com/knowledgebase/articles/1886734-how-do-i-prepare-the-bill-of-materials-bom-file</li>
+	<li>Here is a suggestion when forming your groups for 2019-2020 based on the information I have received so far:
 	<li>2019-2020 Projects:
 	 <ol>
 		<li>AAA SolarGazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad - ACS 712 Current (Broadcom)</a>, 
