--- a/2020content.html
+++ b/2020content.html
@@ -18,17 +18,13 @@
 	<li>The highest AC voltage that will be used is 16Vrms from a wall adaptor from which +/- 15V or as high as 45 VDC can be obtained. Maximum power consumption will be 20 Watts.</li>
     <li>We work with prototypes and prototypes are not to be left powered unattended.</li>
     <li>Projects:
-	 <ol>
+	 <ul>
 	 0. CHOOSE a project of your own by the begining of class week 2 that:
--Uses a custom made and assembled PCB with a STM32F103C8T6 using https://libopencm3.org/ to create a USB device with a sensor or an effector that communicates via serial to a computer.
--Complete Project should be designable for
-https://www.seeedstudio.com/prototype-pcb-assembly.html
-with parts from
-https://www.seeedstudio.com/opl.html
-in order to have project done in time to program/debug it and recieve a grade.
-
-OR CHOOSE a project from the list below by the begining of class week 2, only one student from each section can choose a particular project. Choices are made by being the first to post your choice to the blackboard discussion thread corresponding to your section:
-      
+	  <li>Uses a custom made and assembled PCB with a STM32F103C8T6 using https://libopencm3.org/ to create a USB device with a sensor or an effector that communicates via serial to a computer.</li>
+	  <li>Complete Project should be designable for <a href=https://www.seeedstudio.com/prototype-pcb-assembly.html">assembly</a> with parts from <a href=https://www.seeedstudio.com/opl.html">Open Parts List</a> in order to have project done in time to program/debug it and recieve a grade.</li>
+	 </ul>
+     <ol>
+      OR CHOOSE a project from the list below by the begining of class week 2, only one student from each section can choose a particular project. Choices are made by being the first to post your choice to the blackboard discussion thread corresponding to your section:
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/01.PCF8574">PCF8574 two LEDs, resistors, switch</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/02.OLED">OLED QG-2864KSWEG02</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/03.CANbus">CANBus</a></li>
