--- a/2020content.html
+++ b/2020content.html
@@ -27,7 +27,7 @@
       OR CHOOSE a project from the list below by the begining of class week 2, only one student from each section can choose a particular project. Choices are made by being the first to post your choice to the blackboard discussion thread corresponding to your section:
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/01.PCF8574">PCF8574 two LEDs, resistors, switch</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/02.OLED">OLED QG-2864KSWEG02</a></li>
-      <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/03.CANbus">CANBus</a></li>
+      <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/03.CANBus">CANBus</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/04.ADC">ADC potentiometer</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/05.Servo">Servo and CD4050BE</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/06.W25Q64JVDAIM">W25Q64JVDAIM</a></li>
