--- a/2020content.html
+++ b/2020content.html
@@ -42,7 +42,7 @@
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/15.I2Cslave-master">I2C slave (convert Celcius to Farenheit) and master</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/16.STLink-master">ST-Link and target</a></li>
      </ol>
-     Please choose one of these first come first serve on the discussion board corresponding to your section.
+     Please choose one of these first come first serve on the discussion board corresponding to your section. Suggested combined PCBA orders for cost sharing:
      <ul>
 	  <li>RTOS PCBA order subcircuits: 1-6</li>
       <li>Temperature logger PCBA order subcircuits: 7-11</li>
