--- a/2020content.html
+++ b/2020content.html
@@ -59,7 +59,7 @@
       <li>Health and Wellness: Wearable
      </ol>
 	</li>
-    <li>There was a time that one would go to a bicycle rental company's
+    <li>As an example, there was a time that one would go to a bicycle rental company's
 		  shack, provide something of value as a deposit and the person working
 	  	  at the shack would provide a bicycle on the understanding that you
 		  would return it along with payment for the amount of time that you
