--- a/2020content.html
+++ b/2020content.html
@@ -20,7 +20,7 @@
     <li>Projects:
 	 <ul>
 	 0. CHOOSE a project of your own by the begining of class week 2 that:
-	  <li>Uses a custom made and assembled PCB with a STM32F103C8T6 using https://libopencm3.org/ to create a USB device with a sensor (input device that senses the environment such as a keypad or temperature measurement) or an effector (output device that has an effect on the environment such as a display or motor) that communicates via serial to a computer.</li>
+	  <li>Uses a custom made and assembled PCB with a STM32F103C8T6 using https://libopencm3.org/ to create a USB device with a sensor (input device that senses the environment such as a keypad or temperature measurement) or an <a href="https://en.wikipedia.org/wiki/Robot_end_effector#Examples">effector</a> (output device that has an effect on the environment such as a display or motor) that communicates via serial to a computer.</li>
 	  <li>Complete Project should be designable for <a href=https://www.seeedstudio.com/prototype-pcb-assembly.html">assembly</a> with parts from <a href=https://www.seeedstudio.com/opl.html">Open Parts List</a> in order to have project done in time to program/debug it and recieve a grade.</li>
 	 </ul>
      <ol>
@@ -42,7 +42,7 @@
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/15.I2Cslave-master">I2C slave (convert Celcius to Farenheit) and master</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/16.STLink-master">ST-Link and target</a></li>
      </ol>
-     Please choose one of these first come first serve on the discussion board corresponding to your section. Suggested combined PCBA orders for cost sharing:
+     Please choose one of these first come first serve on the blackboard discussion board corresponding to your section. Suggested combined PCBA orders for cost sharing:
      <ul>
 	  <li>RTOS PCBA order subcircuits: 1-6</li>
       <li>Temperature logger PCBA order subcircuits: 7-11</li>
