--- a/2020content.html
+++ b/2020content.html
@@ -9,7 +9,7 @@
    <ul>
     <li>In this course we build a circuit board for a computing node. It is an individual course such that each student acquires design experience. </li>
 	<li>Please let me know if you are in a situation of financial need. Ordering the hardware for your design, even when sharing the costs with colleagues will cost you over $100. I compare this to a cost of a textbook but please do let me (firstname.lastname_at_humber.ca) know sooner rather than later if this may be a problem for you.</li>
-   	<li>Hub and spokes distributed computing model. Connection from spokes can be via many different technologies: USB, I2C, SPI, UART, encrypted serial, 1-wire, Wi-Fi, Bluetooth, Cell, LoRa, Sigfox, DMX, CANbus, LINbus, EtherCATBACNet, Profinet, Modbus, IR, Zigbee, Z-Wave, LonTalk, Insteon, Powerline, Mesh, etc.
+   	<li>Hub and spokes distributed computing model. Connection from spokes can be via many different technologies: USB, I2C, SPI, UART, encrypted serial, 1-wire, Wi-Fi, Bluetooth, Cell, LoRa, Sigfox, DMX, CANbus, LINbus, EtherCAT, BACNet, Profinet, Modbus, IR, Zigbee, Z-Wave, LonTalk, Insteon, Powerline, Mesh, etc.
 <img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/NetworkArchitectureFall2019variety.jpg"></li>
 	<li>The connection technology that we will be using to a hub will be USB but the spoke itself may use other forms.<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/1process2control.jpg"></li>
 	<li>Discussion of platform (stm32f103c8t6).<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/stm32f103c8t6.jpg"></li>
