--- a/2020content.html
+++ b/2020content.html
@@ -35,7 +35,7 @@
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/08.DS18B20">DS18B20</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/09.Battery">Battery</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/10.BME280">BME 280</a></li>
-      <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/11.Buzzer">Sigfox</a></li>
+      <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/11.Buzzer">Buzzer</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/12.LM75">ST LM75</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/13.Joystick">Joystick</a></li>
       <li><a href="https://github.com/six0four/ceng317/tree/master/2020projects/14.7Segment">7 Segment</a></li>
